--- a/react_click_event/src/App.css
+++ b/react_click_event/src/App.css
@@ -4,8 +4,47 @@
   padding: 2rem;
 }
 
-.App{
+.App {
   width: 100vw;
   height: 100vh;
 }
 
+.point {
+  position: absolute;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  border: 0 solid transparent
+}
+
+.point::before,
+.point::after {
+  content: '';
+  border: 5px solid rgb(116, 161, 24);
+  border-radius: 50%;
+  width: inherit;
+  height: inherit;
+  position: absolute;
+  animation: loader 2s linear infinite;
+  opacity: 0;
+}
+
+.point::before {
+  animation-delay: 1s;
+}
+
+@keyframes loader {
+  0% {
+    transform: scale(1);
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(0);
+    opacity: 0;
+  }
+}
